--- a/libft/write/Makefile
+++ b/libft/write/Makefile
@@ -6,7 +6,7 @@
 #    By: alvachon <alvachon@student.42.fr>          +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2022/10/10 00:43:14 by alvachon          #+#    #+#              #
-#    Updated: 2022/10/10 00:45:36 by alvachon         ###   ########.fr        #
+#    Updated: 2022/10/11 14:10:26 by alvachon         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -17,6 +17,8 @@ SRC = $(WRITE_C) $(FD_C)
 OBJ_DIR = _objFiles
 OBJ = *.o
 
+HEAD = _include/write.h
+
 #
 WRITE_C = srcs/00_write.c
 #
@@ -26,6 +28,7 @@ FD_C = srcs/01_fd.c
 NONE='\033[0m'
 GRAY='\033[2;37m'
 CURSIVE='\033[3m'
+YELL= '\033[0;33m'
 
 # RULES
 all : $(NAME)
@@ -40,17 +43,19 @@ $(OBJ): $(SRC)
 	@mv $(OBJ) $(OBJ_DIR)
 
 clean:
-	@echo $(CURSIVE)$(GRAY) "     - Cleaning Libft..." $(NONE)
+	@echo $(NONE)$(GRAY) "Writing :" $(NONE)
+	@echo $(CURSIVE) "     - Cleaning ..." $(NONE)
 	@rm -f $(OBJ) $(OBJ_DIR)/$(OBJ)
 	@rm -rf $(OBJ_DIR)
 
 fclean: clean
-	@echo $(CURSIVE)$(GRAY) "     - Removing $(NAME)..." $(NONE)
+	@echo $(NONE)$(GRAY) "Writing :" $(NONE)
+	@echo $(CURSIVE) "     - Removing ..." $(NONE)
 	@rm -f $(NAME)
 
 re: fclean all
 
 norm:
-	@echo "\n   Libft norminette..." $(GRAY)$(CURSIVE)
-	@norminette $(SRC) *.h */*.h
+	@echo $(NONE)$(GRAY) "Writing :" $(NONE)
+	@norminette $(SRC) $(HEAD)
 	@echo ""$(NONE)
