--- a/libft/memory/Makefile
+++ b/libft/memory/Makefile
@@ -6,7 +6,7 @@
 #    By: alvachon <alvachon@student.42.fr>          +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2022/10/09 22:04:09 by alvachon          #+#    #+#              #
-#    Updated: 2022/10/10 18:05:25 by alvachon         ###   ########.fr        #
+#    Updated: 2022/10/11 14:09:27 by alvachon         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -17,6 +17,8 @@ SRC = $(ACTIONMEM_C) $(MEMPOINT_C)
 OBJ_DIR = _objFiles
 OBJ = *.o
 
+HEAD = _include/memory.h
+
 # 1. (2) MEMMOVE, MEMCHR
 ACTIONMEM_C = srcs/action_by_mem_2.c
 # 2. (3) MEMESET, CALLOC, BZERO
@@ -26,6 +28,7 @@ MEMPOINT_C = srcs/heap_alloc_3.c
 NONE='\033[0m'
 GRAY='\033[2;37m'
 CURSIVE='\033[3m'
+YELL= '\033[0;33m'
 
 # RULES
 all : $(NAME)
@@ -40,17 +43,19 @@ $(OBJ): $(SRC)
 	@mv $(OBJ) $(OBJ_DIR)
 
 clean:
-	@echo $(CURSIVE)$(GRAY) "     - Cleaning Libft..." $(NONE)
+	@echo $(NONE)$(GRAY) "Pointer on memory :" $(NONE)
+	@echo $(CURSIVE)"     - Cleaning ..." $(NONE)
 	@rm -f $(OBJ) $(OBJ_DIR)/$(OBJ)
 	@rm -rf $(OBJ_DIR)
 
 fclean: clean
-	@echo $(CURSIVE)$(GRAY) "     - Removing $(NAME)..." $(NONE)
+	@echo $(NONE)$(GRAY) "Pointer on memory :" $(NONE)
+	@echo $(CURSIVE)"     - Removing ..." $(NONE)
 	@rm -f $(NAME)
 
 re: fclean all
 
 norm:
-	@echo "\n   Libft norminette..." $(GRAY)$(CURSIVE)
-	@norminette $(SRC) *.h */*.h
+	@echo $(NONE)$(GRAY) "Pointer on memory :" $(NONE)
+	@norminette $(SRC) $(HEAD)
 	@echo ""$(NONE)
